--- a/public/chat.html
+++ b/public/chat.html
@@ -40,7 +40,7 @@
         </form>
       </div>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.14.0/qs.js" integrity="sha512-+J/QMMqYrseoEqavwiQInC29337mi8k+dK85509Fsggy3ZZ9WszHUe5IvlMrjv0BtawKSuZwvksI87UElTk9Fg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.2/qs.min.js"
       integrity="sha256-TDxXjkAUay70ae/QJBEpGKkpVslXaHHayklIVglFRT4="
